# light-clone

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  justfile  todo.md
.claude/: CLAUDE.md  settings.json
.claude/commands/: code-review.md
.claude/commands/changes/0-refine/: critique-prd.md  interview-prd.md
.claude/commands/changes/1-design/: critique-spec.md
.claude/commands/changes/2-build/: implement-spec-autonomous.md  implement-spec.md
.claude/commands/changes/internal/: implement-spec-autonomous-auto-loop.md  implement-spec-autonomous.sh
.claude/skills/changes/: SKILL.md  workflow-guide.md
.claude/skills/changes/templates/: prd-template.md  spec-template.md
.claude/skills/rust-style/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/workflows/: auto-tag.yml  ci.yml
changes/001_base-rust-crate/: 001_base-rust-crate_PRD.md  001_base-rust-crate_SPEC.md  light-clone-rfc.md
changes/002_marker-trait-refactor/: 002_marker-trait-refactor_SPEC.md
lc_clone/: Cargo.toml
lc_clone/benches/: clone_comparison.rs
lc_clone/src/: aliases.rs  conversions.rs  lib.rs  trait_def.rs
lc_clone/src/impls/: containers.rs  im_collections.rs  imbl_collections.rs  mod.rs  primitives.rs  rpds_collections.rs  smart_pointers.rs  tuples.rs
lc_clone/tests/: aliases.rs  containers.rs  conversions.rs  derive_basic.rs  derive_compile_fail.rs  derive_nested.rs  derive_tuple_unit.rs  im_integration.rs  imbl_integration.rs  primitives.rs  rpds_integration.rs  smart_pointers.rs  tuples.rs
lc_clone/tests/ui/: enum_not_supported.rs  enum_not_supported.stderr  string_field.rs  string_field.stderr  union_not_supported.rs  union_not_supported.stderr  vec_field.rs  vec_field.stderr
lc_clone_derive/: Cargo.toml
lc_clone_derive/src/: lib.rs
light_clone/: Cargo.toml
light_clone/benches/: clone_comparison.rs
light_clone/src/: aliases.rs  conversions.rs  lib.rs  trait_def.rs
light_clone/src/impls/: bytes_types.rs  chrono_types.rs  containers.rs  fn_pointers.rs  im_collections.rs  imbl_collections.rs  mod.rs  ordered_float_types.rs  primitives.rs  rpds_collections.rs  rust_decimal_types.rs  smart_pointers.rs  smol_str_types.rs  time_types.rs  tuples.rs  uuid.rs
light_clone/tests/: aliases.rs  containers.rs  conversions.rs  derive_basic.rs  derive_enum.rs  derive_nested.rs  derive_tuple_unit.rs  fn_pointers.rs  im_integration.rs  imbl_integration.rs  primitives.rs  references.rs  rpds_integration.rs  smart_pointers.rs  tuples.rs
light_clone/tests/ui/: enum_not_supported.rs  enum_not_supported.stderr  enum_string_field.rs  enum_string_field.stderr  enum_struct_string_field.rs  enum_struct_string_field.stderr  generic_string.rs  generic_string.stderr  missing_clone.rs  missing_clone.stderr  string_field.rs  string_field.stderr  union_not_supported.rs  union_not_supported.stderr  vec_field.rs  vec_field.stderr
light_clone_derive/: Cargo.toml
light_clone_derive/src/: lib.rs
