[package]
name = "lc_clone"
version = "0.1.0"
edition = "2021"
description = "Compile-time enforcement for O(1) clone operations"
license = "MIT OR Apache-2.0"

[dependencies]
lc_clone_derive = { path = "../lc_clone_derive" }
im = { version = "15", optional = true }
rpds = { version = "1", optional = true }

[features]
default = []
im = ["dep:im"]
rpds = ["dep:rpds"]
full = ["im", "rpds"]

[dev-dependencies]
trybuild = "1"
criterion = "0.6"

[[bench]]
name = "clone_comparison"
harness = false
