[package]
name = "light_clone"
version = "0.4.0"
edition = "2021"
rust-version = "1.70.0"
description = "Compile-time enforcement for O(1) clone operations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SIRHAMY/light-clone"
documentation = "https://docs.rs/light_clone"
readme = "../README.md"
keywords = ["clone", "arc", "rc", "derive", "zero-cost"]
categories = ["rust-patterns", "memory-management"]

[dependencies]
light_clone_derive = { version = "0.4.0", path = "../light_clone_derive" }
im = { version = "15", optional = true }
imbl = { version = "3", optional = true }
rpds = { version = "1", optional = true }
uuid = { version = "1", optional = true }
chrono = { version = "0.4", optional = true }
bytes = { version = "1", optional = true }
rust_decimal = { version = "1", optional = true }
ordered-float = { version = "4", optional = true }
smol_str = { version = "0.3", optional = true }
time = { version = "0.3", optional = true }

[features]
default = []
im = ["dep:im"]
imbl = ["dep:imbl"]
rpds = ["dep:rpds"]
uuid = ["dep:uuid"]
chrono = ["dep:chrono"]
bytes = ["dep:bytes"]
rust_decimal = ["dep:rust_decimal"]
ordered-float = ["dep:ordered-float"]
smol_str = ["dep:smol_str"]
time = ["dep:time"]
full = ["im", "imbl", "rpds", "uuid", "chrono", "bytes", "rust_decimal", "ordered-float", "smol_str", "time"]

[dev-dependencies]
trybuild = "1"
criterion = "0.6"

[[bench]]
name = "clone_comparison"
harness = false
